; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_range_tree.c_rt_btree_vacate.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_range_tree.c_rt_btree_vacate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rt_btree_vacate(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to i32*
  store i32* %7, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = call i32 @zfs_btree_clear(i32* %8)
  %10 = load i32*, i32** %5, align 8
  %11 = call i32 @zfs_btree_destroy(i32* %10)
  %12 = load i32*, i32** %3, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = call i32 @rt_btree_create(i32* %12, i8* %13)
  ret void
}

declare dso_local i32 @zfs_btree_clear(i32*) #1

declare dso_local i32 @zfs_btree_destroy(i32*) #1

declare dso_local i32 @rt_btree_create(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
